💄 Fix Spacing and Contrast Issues

--- a/styles/page-or-post.css
+++ b/styles/page-or-post.css
@@ -12,7 +12,6 @@
 
 .page-or-post-css a {
   transition: all 0.2s ease-in-out;
-  font-weight: 400;
   text-decoration: underline;
   text-decoration-color: blueviolet;
   text-decoration-thickness: 2px;
@@ -50,8 +49,7 @@
 }
 
 .page-or-post-css p {
-  @apply mt-4;
-  font-weight: 300;
+  @apply my-7;
 }
 
 /* Inline code */
@@ -64,38 +62,38 @@
 }
 
 .page-or-post-css h1 {
-  @apply text-5xl my-2;
+  @apply text-4xl mb-4 mt-9;
   margin-top: 30px;
 }
 
 .page-or-post-css h2 {
-  @apply text-4xl font-semibold mb-2;
+  @apply text-3xl font-semibold mb-4 mt-9;
   margin-top: 40px;
 }
 
 .page-or-post-css h3 {
-  @apply text-3xl;
+  @apply text-2xl font-medium mb-4 mt-9;
 }
 
 .page-or-post-css h4 {
-  @apply text-2xl my-2 mt-5;
+  @apply text-2xl my-7 mb-4 mt-9;
 }
 
 .page-or-post-css h5 {
-  @apply text-xl my-2 mt-5;
+  @apply text-2xl mb-4 mt-9;
 }
 
 .page-or-post-css h6 {
-  @apply text-lg my-1 mt-4;
+  @apply text-2xl mb-4 mt-9;
 }
 
 .page-or-post-css ul {
-  @apply my-4 pl-5;
+  @apply my-7 pl-5;
   list-style: disc;
 }
 
 .page-or-post-css ul p {
-  @apply mt-0;
+  @apply my-3;
 }
 
 .page-or-post-css ul li {
